# Python-ING-bank-reports

./: .gitignore  README.md  pyproject.toml
pythoningreport/: __init__.py
pythoningreport/categories/: __init__.py  categories.py
tests/: test_categories.py
