[tool.poetry]
name = "python-ingreport"
version = "0.2.0"
description = ""
authors = ["Victor pinheiro <Victorhpinheiro>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
